<resources>

    <!-- App name -->
    <string name="app_name">Invoices Manager</string>

    <!-- Activities names -->
    <string name="title_activity_add">Adding the invoice</string>
    <string name="title_activity_main">Invoices Manager</string>
    <string name="title_activity_list">Invoices</string>
    <string name="title_activity_configure">Configuration</string>

    <!-- Buttons names -->
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="select_count">0 items</string>
    <string name="add_item">Add item</string>
    <string name="refresh">Refresh</string>
    <string name="invoices">Invoices</string>
    <string name="search">Search</string>
    <string name="load_invoices">Load Invoices</string>
    <string name="shutdown">Shutdown</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="delete_item">Delete item</string>
    <string name="modify_item">Modify item</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="join">Join</string>
    <string name="cancel">Cancel</string>
    <string name="configure">Configure</string>

    <!-- Labels -->
    <string name="invoice">Invoice number: </string>

    <!-- Text fields -->
    <string name="foundDevices">Found devices</string>
    <string name="searchTextHint">Search an invoice</string>
    <string name="invoiceNumberHint">Invoice Number</string>
    <string name="nameHint">Name</string>
    <string name="streetHint">Street</string>
    <string name="cityHint">City</string>
    <string name="prizeHint">Prize</string>
    <string name="dateOfIssueHint">Date of issue</string>
    <string name="maturityDateHint">Maturity date</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_invoices_main">InvoicesMainActivity</string>
    <string name="title_activity_searching_devices">SearchingDevicesActivity</string>

</resources>