<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/top_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-8dp" >
        
        <Button
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:onClick="selectAll"
            android:text="@string/select_all"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:width="0dp"
            android:background="@drawable/black_buttons" />
        
        <Button
            android:id="@+id/select_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:clickable="false"
            android:text="@string/select_count"
            android:textColor="@android:color/white"
            android:textSize="16dp"
            android:width="0dp"
            android:background="@drawable/black_buttons" />
         
         <Button
             android:id="@+id/deselect_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.8"
             android:onClick="deselectAll"
             android:text="@string/deselect_all"
             android:textColor="@android:color/white"
             android:textSize="16dp"
             android:width="0dp"
             android:background="@drawable/black_buttons" />
        
    </TableRow>
    
    <RelativeLayout 
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/RelativeLayout01" 
    	android:layout_width="fill_parent" 
    	android:layout_height="fill_parent">
    	
        <Button
        	android:id="@+id/load_invoices"
        	android:text="@string/load_invoices"
        	android:textSize="20dp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_centerInParent="true"
        	android:background="@android:color/transparent"
        	android:drawableTop="@drawable/load_invoices_selector"
        	android:onClick="loadInvoices" >
    	</Button>
    	
     </RelativeLayout>
    
     <ListView
        android:id="@+id/elements"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        >
   	</ListView>
    
    <TableRow
        android:id="@+id/bottom_toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginBottom= "-7dp">
        
        
         <Button
            android:id="@+id/delete_item"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="-4.2dp"
            android:layout_marginLeft="-4.2dp"
            android:textColor="@android:color/white"
            android:onClick="delete" 
            android:text="@string/delete_item"
            android:background="@drawable/black_buttons" />
         
         <Button
             android:id="@+id/modify_item"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="-4.2dp"
             android:layout_marginRight="-5dp"
             android:layout_weight="0.5"
             android:textColor="@android:color/white"
             android:onClick="modify"
             android:text="@string/modify_item"
             android:background="@drawable/black_buttons" />
        
    </TableRow>

</LinearLayout>